--- a/audioPlayerBlock.html
+++ b/audioPlayerBlock.html
@@ -13,23 +13,29 @@
       }
       #main {
         width: 90vw;
-        /* max-width: 1300px; */
+        max-width: 1300px;
         margin: auto;
       }
 
       /* canvas bars styling */
-      #canvas-bars {
+      /* #canvas-bars {
         width: 100%;
         height: 600px;
-        border: 1px solid;
+        border: 1px solid black;
         margin: 100px auto;
         display: flex;
         justify-content: space-around;
-        /* align-items: center; */
+  
       }
 
       #canvas-bars canvas {
         margin-top: 50;
+      
+      } */
+
+      canvas {
+        border: 1px solid;
+        /* margin: auto; */
       }
 
       /* controllers styling */
@@ -37,14 +43,15 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-top: 100px;
       }
 
       #sound,
       #forward {
         border: 1px solid #a4b7bb;
         border-radius: 50px;
-        width: 150px;
-        height: 100px;
+        width: 60px;
+        height: 40px;
         background: transparent;
         padding: 5px 15px;
         cursor: pointer;
@@ -52,28 +59,29 @@
 
       #sound img,
       #forward img {
-        width: 50px;
-        height: 50px;
+        width: 25px;
+        height: 25px;
       }
       #play-pause {
         border: 1px solid #a4b7bb;
         border-radius: 10px;
         background: transparent;
         border-radius: 100px;
-        width: 250px;
-        height: 150px;
+        width: 100px;
+        height: 70px;
         cursor: pointer;
       }
       #play-pause img {
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 50px;
       }
     </style>
   </head>
   <body>
     <div id="main">
+      <canvas id="canvas-bars"></canvas>
+
       <!-- creating canvas bars -->
-      <div id="canvas-bars"></div>
 
       <!-- creating button controllers -->
       <div id="audio-controllers">
@@ -99,7 +107,10 @@
       </div>
     </div>
     <script>
-      let bars = document.getElementById("canvas-bars");
+      let canvas = document.getElementById("canvas-bars");
+      let context = canvas.getContext("2d");
+      canvas.width = window.innerWidth - 100;
+      canvas.height = 200;
       let btn_icon = document.getElementById("ctrl-icon");
       let play_pause = document.getElementById("play-pause");
       let audio = new Audio();
@@ -107,30 +118,86 @@
       let isPlaying = false;
       var audio_duration = 0;
 
-      //creating canvas bars
-      audio.onloadedmetadata = async function () {
-        audio_duration = await audio.duration;
-        //console.log(audio_duration);
+      var width = 5;
+      var height = [];
+      var X = 5;
+      var Y = [];
 
-        for (let i = 0; i <= audio_duration; i++) {
-          var canvasBar = document.createElement("canvas");
-          canvasBar.setAttribute("class", `canvas-bar${i}`);
-          var context = canvasBar.getContext("2d");
-          canvasBar.style.width = "25px";
-          var random = Math.floor(Math.random() * 140);
-          var randomTop = Math.floor(Math.random() * 10);
-          context.fillStyle = "#E1E1E2";
-          context.fillRect(0, randomTop, 150, random); //(l, t, w, hig)
+      for (let i = 0; i <= 130; i++) {
+        Y.push(Math.floor(Math.random() * 30) + 10);
+        height.push(Math.floor(Math.random() * 100) + 60);
+      }
 
-          bars.appendChild(canvasBar);
+      for (let i = 0; i <= 130; i++) {
+        context.beginPath();
+        context.fillStyle = "gray";
+        context.fillRect(X, Y[i], width, height[i]);
+        context.closePath();
+        X = X + 10;
+      }
+      //   };
+      context.fillStyle = "red";
+      function fillBar(val) {
+        var length = val;
+        X = 5;
+        for (let i = 0; i < length; i++) {
+          context.beginPath();
+          context.fillRect(X, Y[i], width, height[i]);
+          context.closePath();
+          X = X + 10;
         }
-      };
+      }
+
+      canvas.addEventListener("click", jumpOnCanvas);
+      function jumpOnCanvas(e) {
+        console.log(e);
+      }
+      // fillBar(100);
+
+      //   //creating canvas bars
+      //   audio.onloadedmetadata = async function () {
+      //     audio_duration = await audio.duration;
+      //     //console.log(audio_duration);
+
+      //     for (let i = 0; i <= audio_duration; i++) {
+      //       var canvasBar = document.createElement("canvas");
+      //       canvasBar.setAttribute("class", `canvas-bar${i}`);
+      //       canvasBar.setAttribute("data-id", `${i}`);
+      //       var context = canvasBar.getContext("2d");
+      //       canvasBar.style.width = "25px";
+      //       var random = Math.floor(Math.random() * 140);
+      //       var randomTop = Math.floor(Math.random() * 10);
+      //       context.fillStyle = "#E1E1E2";
+      //       context.fillRect(0, randomTop, 150, random); //(l, t, w, hig)
+
+      //       bars.appendChild(canvasBar);
+      //     }
+      //   };
+
+      //   var get_duration = document.querySelector("#canvas-bars");
+
+      //   let query;
+      //   get_duration.addEventListener("click", (e) => {
+      //     const { dataset } = e.target;
+      //     query = dataset.id;
+      //     console.log(query);
+      //   });
 
       // play pause contolling function
       play_pause.addEventListener("click", togglePlay);
 
+      var changingLength = 0;
+      var interval;
       function togglePlay() {
         isPlaying ? audio.pause() : audio.play();
+        if (!isPlaying) {
+          interval = setInterval(() => {
+            fillBar(changingLength);
+            changingLength++;
+          }, 1000);
+        } else {
+          clearInterval(interval);
+        }
       }
 
       audio.onplaying = function () {
@@ -140,6 +207,7 @@
       };
       audio.onpause = function () {
         isPlaying = false;
+
         btn_icon.src =
           "https://icon-library.com/images/android-triangle-icon/android-triangle-icon-7.jpg";
       };
